codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__layout_snapshots__chat_small_idle_h1.snap
---
source: tui/src/chatwidget/tests/layout_snapshots.rs
assertion_line: 16
expression: terminal.backend()
---
"                                        "
