codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__layout_snapshots__status_widget_active.snap
---
source: tui/src/chatwidget/tests/layout_snapshots.rs
assertion_line: 141
expression: terminal.backend()
---
"                                                                                "
"• Analyzing (0s • esc to interrupt)                                             "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
